# researcher-demo

./: .env.example  .gitignore  PLAN.html  README.md  pyproject.toml
docs/: M1-llm-guide.md
mini_researcher/: __init__.py  config.py  llm copy 2.py  llm.py  retrievers.py  retrievers_copy.py
tests/: smoke_m1_llm.py  smoke_m2_tavily.py  smoke_m2_tavily_copy.py  test_m0_config.py
